Use WebAgent as an EdgeAgent using mediator

--- a/samples/aspnetcore/Views/Credentials/CredentialsForm.cshtml
+++ b/samples/aspnetcore/Views/Credentials/CredentialsForm.cshtml
@@ -12,7 +12,7 @@
                 @foreach (var Connection in Model.Connections)
                 {
                     if (Connection.State == ConnectionState.Connected) {
-                        <option value="@Connection.Id">@Connection.Alias.Name</option>
+                        <option value="@Connection.Id">@(Connection.Alias?.Name?? Connection.Id)</option>
                     }
                 }
             </select>
