--- a/samples/aspnetcore/Views/Connections/Index.cshtml
+++ b/samples/aspnetcore/Views/Connections/Index.cshtml
@@ -20,7 +20,7 @@
                     <td>
                         @if (item.State == ConnectionState.Connected)
                         {
-                            <img src="@Url.Identicon(item.Alias.Name, size: 50)" style="width: 25px; height: 25px" />
+                            <img src="@Url.Identicon(item.Alias?.Name ?? item.Id, size: 50)" style="width: 25px; height: 25px" />
                             <a asp-area="" asp-controller="Connections" asp-action="Details" asp-route-id="@item.Id">@(item.Alias?.Name ?? item.Id)</a>
                         }
                         else
